src/styles/journal.scss
/* ... */
.toc {
  float: right;
  border-radius: 5px;
  margin-left: 30px;
  margin-right: 30px;
  margin-top: 30px;
  min-width: 200px;
  max-width: 260px;
  max-height: 80vh;
  overflow: auto;
  background: rgba($color-accent, 0.05);
  &,
  * {
    font-size: $toc-size;
  }
  ul {
    list-style: none;
    padding: 0 0 0 20px;
    margin: 0;
    line-height: 1.7em;
  }
  .toc-content {
    padding: 20px;
    a {
      text-decoration: none;
    }
  }
  .toc-active {
    color: darken($color-accent, 40%) !important;
  }
  @media screen and (max-width: $single-column-max-width) {
    line-height: 2em;
    float: none;
    margin-top: 30px;
    margin-left: 0;
    margin-right: 0;
    .toc-content {
      padding: 10px;
    }
  }
}

.pagination {
  display: none;
  a {
    text-decoration: none;
  }

  .pagination-action {
    -webkit-appearance: none;
  }

  @media screen and (max-width: $single-column-max-width) {
    display: flex !important;
    flex-direction: row;
    justify-content: space-between;
    &:not(.index-page) {
      margin-top: 15px;
    }
    .pagination-indicator {
      display: flex;
      flex-direction: column;
      align-content: center;
      justify-content: center;
      align-items: center;
      justify-items: center;
      width: $extra-container-width;
      padding: 15px 0;
      font-size: 12px;
      font-family: $mono-font-list;
    }
    .pagination-action {
      display: flex;
      flex-direction: column;
      align-content: center;
      justify-content: center;
      align-items: center;
      justify-items: center;
      width: $extra-container-pagination-width;
      cursor: hand;
      cursor: pointer;
      padding: 15px 0;
      :not(.pagination-action-icon) {
        transition: all 0.2s linear;
        font-size: 13px;
        font-family: $mono-font-list;
      }
      .pagination-action-icon {
      }
      * {
        transition: all 0.3s linear;
      }
      &:hover {
        text-decoration: none;
        * {
          color: $dark-accent;
        }
      }
    }
  }
}

.year {
  color: $dark-accent;
}

mjx-container {
  overflow-y: hidden !important;
}

.gsc-control-searchbox-only {
  display: flex !important;
  background: none !important;
  max-width: 70%;
  margin-top: 1em;
  margin-left: 1.5em;
  margin-right: 0.2em;
  @media screen and (max-width: $single-column-max-width) {
    margin-left: 0.5em;
    padding-left: 0.2em;
    .gsst_a {
      display: none;
    }
  }
}

.vwrap * {
  color: black !important;
}

.vcontent p {
  color: black !important;
}

// CC
.post-cc {
  &::after {
    -webkit-mask-image: url('/images/cc.svg');
    mask-image: url('/images/cc.svg');
    -webkit-mask-size: cover;
    mask-size: cover;
    -webkit-mask-repeat: no-repeat;
    mask-repeat: no-repeat;
    background-color: darken($color: rgba($color-accent, 0.05), $amount: 25%);
    content: " ";
    height: 175px;
    width: 175px;
    display: block;
    z-index: -1;
    position: absolute;
    left: -57px;
    top: -55px;
    transform: rotate(325deg);
  }
  z-index: 0;
  overflow: hidden;
  position: relative;
  margin-left: -$post-wrapper-padding-x;
  margin-right: -$post-wrapper-padding-x;
  padding: $post-wrapper-padding-y $post-wrapper-padding-x $post-wrapper-padding-x;
  p {
    margin-bottom: 0;
  }
  color: $dark-accent;
  background: rgba($color-accent, 0.05);

  @media screen and (max-width: $single-column-max-width) {
    margin-left: -$post-wrapper-padding-mobile;
    margin-right: -$post-wrapper-padding-mobile;
    padding: $post-wrapper-padding-mobile $post-wrapper-padding-mobile $post-wrapper-padding-x $post-wrapper-padding-mobile;
  }
}




// Friendship
.friendship {
  .card {
    margin-bottom: 1.5rem;
    border-radius: 5px;
  }
  .card:hover {
    background: rgba($color-accent, 0.05);
    color: darken($color-accent, 30%);
    cursor: pointer;
  }
  .card img {
    transition: all 0.5s;
  }
  .card:hover img {
    transform: rotate(360deg);
  }
  > div > div > div > div {
    // Card Body
    .friend-sheet {
      display: flex;
      flex: 1;
    }
    .friend-information {
      padding-left: 1em;
      display: flex;
      flex: 1;
      justify-items: center;
      justify-content: center;
      flex-direction: column;
      width: 70%;
      font-family: $sans-preferred-font-list;

      > h1 {
        // Name
        margin: 0 0 0 0;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        line-height: 1.5em;
      }
      > p {
        // Description
        margin: 0 0 0 0;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        line-height: 1.2em;
      }
    }
    .friend-avatar {
      width: 80px;
      height: 80px;
      > img {
        // Logo Pictrue
        border: 1px solid #dddddd;
        border-radius: 50% !important;
        width: 80px;
        height: 80px;
        max-width: 80px;
        min-width: 80px;
      }
    }
  }
}

// waline
img.vuser {
  transition: all 0.5s;
}
.vitem:hover {
  img.vuser {
    transform: rotate(360deg);
  }
}

.veditor {
  border-radius: 0 !important;
}
.tags {
  display: flex;
  align-items: center;
  flex-direction: row;
  padding-left: 10px;
  flex-wrap: wrap;
  .tag {
    margin: 10px;
  }
}
/* ... */

